Remove tags
Heck they don't seem to work, goswagger?
